removing unnecessary code

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
 <!-- Red Banner Section -->
     <section class="banner">
-        <h2>Hostmonster Sucks.</h2>
-        <h2>Do not trust or use Hostmonster.</h2>
-        <h2>Hostmonster will almost certainly let you down time after time.</h2>
+        <h2>Bluehost Sucks.</h2>
+        <h2>Do not trust or use Bluehost.</h2>
+        <h2>Bluehost will almost certainly let you down time after time.</h2>
     </section>
 
 <!-- -->
