corrected brand name

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li class="list-text">Hostmonster has excessive telephone support wait times</li>
                 <li class="list-text">When you do get through the operator they have very limited access and cannot resolve serious problems so they create a ticket for escalated support</li>
                 <li class="list-text">The same is true for Hostmonster Live Chat, who will ask you, exactly what you just asked them over and over again as if you are a 5 year old child, until you become infuriated. Eventually, if you push them, you will be given a support ticket for escalated support</li>
-                <li class="list-text">Escalated support can <strong>only be contacted</strong> via email and are not open on weekends. Response times are usually 2 to 3 days and are usually just a canned response. So, if it is urgent or mission critical Bluehost will not lift a finger to help you or take any notice of any damage they are doing to you.</li>
+                <li class="list-text">Escalated support can <strong>only be contacted</strong> via email and are not open on weekends. Response times are usually 2 to 3 days and are usually just a canned response. So, if it is urgent or mission critical Hostmonster will not lift a finger to help you or take any notice of any damage they are doing to you.</li>
             </ul>
             <h3>Hostmonster just does not care less about you or your business, only your credit card number</h3>
             <ul>
@@ -101,9 +101,9 @@
 
 <!-- Red Banner Section -->
     <section class="banner">
-        <h2>Bluehost Sucks.</h2>
-        <h2>Do not trust or use Bluehost.</h2>
-        <h2>Bluehost will almost certainly let you down time after time.</h2>
+        <h2>Hostmonster Sucks.</h2>
+        <h2>Do not trust or use Hostmonster.</h2>
+        <h2>Hostmonster will almost certainly let you down time after time.</h2>
     </section>
 
 <!-- -->
